fix header padding top on narrow screens

--- a/src/components/Home/landingpage.css
+++ b/src/components/Home/landingpage.css
@@ -23,6 +23,18 @@ h3 {
 	font-size: 17px !important;
 }
 
+@media (max-width: 954px){
+	#headerTop{
+		padding-top: 17px;
+	}
+}
+
+@media (min-width: 955px){
+	#headerTop{
+		padding-top: 70px;
+	}
+}
+
 @media (max-width: 1060px){ 
 	#howItWorks {
 		padding-top: 50px;
@@ -164,10 +176,6 @@ p{
 	max-width: 700px;
 	margin: 0 auto;
 	padding-bottom: 30px;
-}
-
-#headerTop {
-	padding-top: 70px;
 }
 
 /*#helpRow {
